--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>For Kat </title>
 <style>
 body{
-    background-image: url("kat2.jpg");
+    //background-image: url("kat2.jpg");//
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: 100% 100%;
